--- a/public/forum/home.html
+++ b/public/forum/home.html
@@ -20,8 +20,8 @@
                 <img src="../assets/img/voleibol_png_branca.png" alt="">
             </div>
             <div class="perfil_container">
-                <div class="foto_perfil">
-                    <img src="../assets/img/user_profiel_image.png" alt="">
+                <div id="foto_perfil_header" class="foto_perfil">
+                   
                 </div>
                 <span onclick="dropDownMenuToggle()" class="menu_toggle">
                     <span id="user_name"></span>
@@ -124,6 +124,14 @@
 <script>
     user_name.innerHTML = sessionStorage.getItem('NOME_USUARIO')
     var idUsuario = sessionStorage.ID_USUARIO;
+    var fotoPerfil = sessionStorage.FOTO_PERFIL
+
+    if(fotoPerfil != ''){
+        foto_perfil_header.style.backgroundImage = `url(../assets/profiles_img/${fotoPerfil})`
+    }else {
+        foto_perfil_header.style.backgroundImage = `url(../assets/img/user_profiel_image.png)`
+
+    }
 
     function publicar() {
         const assunto = input_assunto.value;
@@ -224,8 +232,13 @@
                         feed.innerHTML += `
                         <div class="post_item" onclick="irParaPost(${post.idPostagem})">
                             <div class="post_section">
-                                <div class="foto_post">
-                                <img src="../assets/img/user_profiel_image.png" alt="">
+                                
+                                ${post.fotoPerfil != '' ? 
+                                `<div style="background-image: url(../assets/profiles_img/${post.fotoPerfil})" class="foto_post">`
+                                    :
+                                `<div style="background-image: url(../assets/img/user_profiel_image.png)" class="foto_post">`
+                                }
+
                                 </div>
                                 <div class="post_content">
                                     <div class="post_info">
