--- a/public/login.html
+++ b/public/login.html
@@ -116,6 +116,7 @@
                         sessionStorage.EMAIL_USUARIO = json.email;
                         sessionStorage.NOME_USUARIO = json.nome;
                         sessionStorage.ID_USUARIO = json.id;
+                        sessionStorage.FOTO_PERFIL = json.fotoPerfil;
                         // sessionStorage.AQUARIOS = JSON.stringify(json.aquarios)
 
                         setTimeout(function () {
