refactor: Correção dos parametros passados para a func toggleModalEdit da postagem devido a um bug com textos que possuam quebra de linha

--- a/public/forum/post.html
+++ b/public/forum/post.html
@@ -178,7 +178,7 @@
                         console.log(curtidas)
 
                         if(dadosPostagens.fotoPerfil != ''){
-                            foto_comentario_input.style.backgroundImage = `url(../assets/profiles_img/${dadosPostagens.fotoPerfil})`
+                            foto_comentario_input.style.backgroundImage = `url(../assets/profiles_img/${fotoPerfil})`
                         }else{
                             foto_comentario_input.style.backgroundImage = `url(../assets/img/user_profiel_image.png)`
 
