feat: Validação de senha adicionada para ter caracter especial no inicial da senha

--- a/public/forum/post.html
+++ b/public/forum/post.html
@@ -177,7 +177,7 @@
                         console.log(comentarios)
                         console.log(curtidas)
 
-                        if(dadosPostagens.fotoPerfil != ''){
+                        if(fotoPerfil != ''){
                             foto_comentario_input.style.backgroundImage = `url(../assets/profiles_img/${fotoPerfil})`
                         }else{
                             foto_comentario_input.style.backgroundImage = `url(../assets/img/user_profiel_image.png)`
