--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -171,7 +171,7 @@
         const terceiraValidation = document.querySelector("#validation3")
 
         const hasTenCaracters = password.length >= 10 ? 'correct' : 'wrong';
-        const hasSpecial = password.indexOf('@') > 0 || password.indexOf('#') > 0 ? 'correct' : 'wrong';
+        const hasSpecial = password.indexOf('@') >= 0 || password.indexOf('#') >= 0 ? 'correct' : 'wrong';
 
         let hasNumber = 'wrong';
         for (let i = 0; i <= 9; i++) {
