--- a/public/forum/dashboard.html
+++ b/public/forum/dashboard.html
@@ -189,21 +189,21 @@
                 label: 'Comentarios',
                 data: [],
                 fill: false,
-                backgroundColor: 'rgb(75, 192, 192)',
+                backgroundColor: '#FFAF36',
                 tension: 0.1
             },
             {
                 label: 'Visualizações',
                 data: [],
                 fill: false,
-                backgroundColor: 'rgb(199, 52, 52)',
+                backgroundColor: '#2B84D7',
                 tension: 0.1
             },
             {
                 label: 'Curtidas',
                 data: [],
                 fill: false,
-                backgroundColor: 'rgb(199, 30, 51)',
+                backgroundColor: '#FF3636',
                 tension: 0.1
             }
 
