feat: Carrossel de imagens adicionado na landing page, com a história e curiosidades sobre o vôlei, armazenados em um vetor de objetos JSON

--- a/public/forum/post.html
+++ b/public/forum/post.html
@@ -19,7 +19,7 @@
     <header class="header_container">
         <section class="section_header container">
             <div class="img_container">
-                <img src="../assets/img/voleibol_png_branca.png" alt="">
+                <img onclick="navegation('home.html')" src="../assets/img/voleibol_png_branca.png" alt="">
             </div>
             <div class="perfil_container">
                 <div id="foto_perfil_header" class="foto_perfil">
@@ -83,22 +83,23 @@
             </div>
             <ul class="list_footer">
                 <li class="title_list">Navegação</li>
-                <li>História</li>
-                <li>Características</li>
-                <li>Sobre mim</li>
+                <li><a href="home.html" class="link_footer">Home</a></li>
+                <li><a onclick="navegation('profile.html')" class="link_footer">Perfil</a></li>
             </ul>
             <ul class="list_footer">
                 <li class="title_list">Contato</li>
-                <li>(+55) 0000-0000</li>
-                <li>(+55) 3691-0000</li>
-                <li>nome.sobrenome@gmail.com</li>
+                <li>+55 (88) 99215-1831</li>
+                <li>joao.melo@sptech.school</li>
             </ul>
             <div class="list_icon">
-                <p class="title_list">Redes Sociais</p>
+                <p class="title_list">Social</p>
                 <div class="flex_icon">
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-whatsapp"></i>
-                    <i class="fa-brands fa-facebook"></i>
+                    <a href="https://www.instagram.com/_jaov_/" target="_blank">
+                        <i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/joão-victor-632a1021a/" target="_blank">
+                        <i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/Joao-Victor-Barroso-Melo" target="_blank">
+                        <i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
         </div>
